@@ -23,9 +23,9 @@ dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.8'
-    compile 'org.springframework:spring-beans:5.1.1.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.1.RELEASE'
+    compile 'org.apache.httpcomponents:httpclient:4.5.9'
+    compile 'org.springframework:spring-beans:5.1.2.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.2.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
     compile fileTree(dir: 'lib', include: '*.jar')
 }
